# BodyMapper

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Camera/include/: Camera.h
src/Camera/src/: Camera.cpp
src/common/: logs.h
